responsivnes alignments fixed

--- a/src/app/components/about-founder/about-founder.component.css
+++ b/src/app/components/about-founder/about-founder.component.css
@@ -41,7 +41,7 @@
 
   .founder-content{
     font-size: 1.3rem;
-    text-align: justify;
+    text-align: left;
   }
   
   /* Left: Image Frame */
